--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install serve
-        run: yarn global add pm2
+        run: npm i -g pm2
 
       - name: Run e2e tests
         uses: cypress-io/github-action@v5
         with:
           start: pm2 serve dist 3000 --spa
-          command: yarn e2e:ci
+          command: npm e2e:ci
           wait-on: "http://localhost:3000"
           wait-on-timeout: 120
           browser: chrome
