--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -19,7 +19,7 @@ services:
       - ./docker/videos:/app/tests/e2e/videos
       - ./docker/screenshots:/app/tests/e2e/screenshots
     command: >
-      bash -c 'echo -n "======> local noVNC URL: http://localhost:8080/vnc.html?autoconnect=true " && npx wait-on http://display:8080 && echo -n "======> remote noVNC URL: " && curl -s ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && yarn test:e2e:ci:anvil'
+      bash -c 'echo -n "======> local noVNC URL: http://localhost:8080/vnc.html?autoconnect=true " && npx wait-on http://display:8080 && echo -n "======> remote noVNC URL: " && curl -s ngrok:4040/api/tunnels | jq -r .tunnels[0].public_url && npm run test:e2e'
     networks:
       - x11
 
@@ -32,26 +32,6 @@ services:
       - DISPLAY_HEIGHT=${DISPLAY_HEIGHT}
     ports:
       - '8080:8080'
-    networks:
-      - x11
-
-  ngrok:
-    profiles:
-      - ngrok
-    container_name: ngrok
-    image: synthetixio/ngrok:016121eafdfff448414894d0ca5a50b1d72b62eb-base
-    ports:
-      - '4040:4040'
-    command:
-      [
-        'ngrok',
-        'http',
-        'display:8080',
-        '--authtoken',
-        '${NGROK_AUTH}'
-      ]
-    depends_on:
-      - display
     networks:
       - x11
 
