--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "e2e": "env-cmd -f .env synpress run",
-    "e2e:ci": "synpress run"
+    "e2e:ci": "synpress run",
+    "start:server": "serve dist",
+    "test:e2e": "start-server-and-test 'npm run start:server' http-get://localhost:3000 'synpress run'"
   },
   "dependencies": {
     "@synthetixio/synpress": "^3.1.0",
@@ -17,6 +19,8 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "serve": "^14.2.0",
+    "start-server-and-test": "^1.15.4",
     "util": "^0.12.4",
     "wagmi": "~0.11.0"
   },
